[gd_scene load_steps=5 format=3 uid="uid://7wu6w2qfk3e"]

[ext_resource type="Script" path="res://scenes/components/brick_columns/BrickColumns.gd" id="1_4ycpi"]
[ext_resource type="PackedScene" uid="uid://d2173so402ot" path="res://scenes/components/brick_columns/brick_column/BrickColumn.tscn" id="2_hes6y"]

[sub_resource type="BoxShape3D" id="BoxShape3D_i818p"]
size = Vector3(48, 0.237899, 48)

[sub_resource type="BoxShape3D" id="BoxShape3D_w5t68"]
size = Vector3(1, 0.343642, 1)

[node name="BrickColumns" type="Area3D"]
script = ExtResource("1_4ycpi")
metadata/_edit_group_ = true

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_i818p")
metadata/_edit_lock_ = true

[node name="Base" parent="." instance=ExtResource("2_hes6y")]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, -3.1, 0)
collision_layer = 0
metadata/_edit_lock_ = true

[node name="Columns" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -19.95, 0)
collision_layer = 0
metadata/_edit_lock_ = true

[node name="Collision" type="CollisionShape3D" parent="Columns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 0)
shape = SubResource("BoxShape3D_w5t68")
metadata/_edit_lock_ = true

[node name="BrickColumn_0" parent="Columns" instance=ExtResource("2_hes6y")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0145813, -2, 0.00243449)
metadata/_edit_lock_ = true

[node name="BrickColumn_1" parent="Columns" instance=ExtResource("2_hes6y")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0145813, 0, 0.00243449)
metadata/_edit_lock_ = true

[node name="BrickColumn_2" parent="Columns" instance=ExtResource("2_hes6y")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0145813, 2, 0.00243449)
metadata/_edit_lock_ = true

[node name="BrickColumn_3" parent="Columns" instance=ExtResource("2_hes6y")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0145813, 4, 0.00243449)
metadata/_edit_lock_ = true

[node name="BrickColumn_4" parent="Columns" instance=ExtResource("2_hes6y")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0145813, 6, 0.00243449)
metadata/_edit_lock_ = true

[node name="BrickColumn_5" parent="Columns" instance=ExtResource("2_hes6y")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0145813, 8, 0.00243449)
metadata/_edit_lock_ = true

[node name="BrickColumn_6" parent="Columns" instance=ExtResource("2_hes6y")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0145813, 10, 0.00243449)
metadata/_edit_lock_ = true

[node name="BrickColumn_7" parent="Columns" instance=ExtResource("2_hes6y")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0145813, 12, 0.00243449)
metadata/_edit_lock_ = true

[node name="BrickColumn_8" parent="Columns" instance=ExtResource("2_hes6y")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0145813, 14, 0.00243449)
metadata/_edit_lock_ = true

[node name="BrickColumn_9" parent="Columns" instance=ExtResource("2_hes6y")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0145813, 16, 0.00243449)
metadata/_edit_lock_ = true

[node name="BrickColumn_10" parent="Columns" instance=ExtResource("2_hes6y")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0145813, 18, 0.00243449)
metadata/_edit_lock_ = true

[connection signal="body_entered" from="." to="." method="_on_stepped_on_floor"]
[connection signal="body_entered" from="Columns" to="." method="_on_stepped_on_lifting"]
[connection signal="body_exited" from="Columns" to="." method="_on_stepped_on_lowering"]
